overview: Fix issue with blur not sometimes not working.

Issue happens when animation blur to start and no animation to end, or
vice versa. Slide animation skips when it thinks the animation is already
shown or not shown. For direct blur settings when there is no animation,
set the slide animation's state as well, so it has knowledge when blur
is set not using slide animation.

Test: manual
Bug: 852160
Change-Id: Ib4a0be9606e65d10f7cfdc542019f870a5ecfe58
Reviewed-on: https://chromium-review.googlesource.com/1098462
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566888}
Former-commit-id: 338c0e1ba770469f72449e2f19ad1b2a93fef5f6